--- a/about.html
+++ b/about.html
@@ -1,60 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>HTML abouut</title>
-
-	<style>
-		img
-		{
-			height: 90vh;
-			width: 50vh;
-			text-align: center;
-		}
-
-		body
-		{
-			background-color: gray;
-
-			color: black;
-		}
-	</style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Harris Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="container">
-		
-		<div class="gallery">
-		
-			
-		</div>
-		<p>
-			<img src="d man.jpg" style="float: left; padding: 15px;">
-			<b><u>NAME:</u></b><br>Darius S. James 
-		</p>
+    <header class="header">
+       <img src="self.jpg" alt="logo" class="img logo">
+        <nav>
+          <ul type="none" class="navlinks">
+            <li><a href="index.html" class="k">Home</a></li>
+            <li><a href="about.html" class="k">About</a></li>
+          </ul>
+        </nav>
+        <a href="#contact" class="cont"><button class="button">Contact</button></a>
+    </header>
 
-		<p>
-			<b><u>Email & Contact:</u></b><br>dariusjames718@gmail.com<br> 0776983254
-		</p>
+    <h2>Self Explanation:</h2>
+    <p >Im a graphics designer, and i have been in the graphic
+        <br>
+         field for the past two years. I admired graphicing because,
+         <br>
+         it is a field of creativity and i have full interest within it.</p>
 
-		<p>
-			<b><u>Class & Section:</u></b><br>Art 277<br>Section 3
-		</p>
+         <h2>Interest:</h2>
+         <p>Design (Emphasis: Graphics designing)</p>
 
-		<p>
-			<b><u>Achievement:</u></b><br>With the help of html and CSS, I have learned<br>
-			how to created a registration form, webpages and websits.<br>
-			The used of CSS also made me to set a backgtound image of my webpage(s).<br>
-			CSS enable me to text align, pad, and color my tex.
-           </p>
+         <h2>Niche skill:</h2>
+         <p>Network Configuration</p>
 
-           <p>
-           	<b><u>Interest:</u></b><br>The interest I have in both HTML and CSS is that the<br>
-           	combination of the two languages help me to designe my websits(s) or webpage(s).<br>
-           	With the use of HTML and CSS, you can become a web developer.<br> 
-           	It give you the full advantage to built a website without other languages.
-<<li> <a href="../Home.html" class="btn btn-custom btn-lg page-scroll">HOME</a></li>
-           </p>
+         <h2>Project:</h2>
+         <p>I'm the current graphic designer for: <a href="https://www.facebook.com/groups/441798363555634/?ref=share" class="irea" target="_blank"> Team @Irea BBL season2</a></p>
 
-	
-</div>
-</body>
-</html>
+         <h2 id="contact">Contact:</h2>
+         <p>Phone nuber: 0776747436</p>
+         <p>Email: <a href="harrisjohnsonogarsir@gmail.com" class="email">harrisjohnsonogarsir@gmail.com</a></p>
+    </body>
+    </html>
