--- a/index.html
+++ b/index.html
@@ -1,78 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, ini      tial scale=1.0">
-	<meta name="refersh" content="50">
-	<title>Assignemt#4</title>
-	<!--Work must open in all brower-->
-	
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Harris Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<style>
-img
-	{
-		size: 15px;
-		height: 550 px;
-        display: block;
-		margin-left: auto ;
-		margin-right: auto;
-		width: 96%;
-		fl    
-	}
-	
-</style>
-<picture>
+    <header class="header">
+       <img src="self.jpg" alt="logo" class="img logo">
+        <nav>
+          <ul type="none" class="navlinks">
+            <li><a href="index.html" class="k">Home</a></li>
+            <li><a href="about.html" class="k">About</a></li>
+          </ul>
+        </nav>
+        <ul type="none">
+        <a href="about.html"><li class="button">Contact</li></a>
+            </ul>
+          </div>
 
-		<source media="(main-width:500px)" src="small.jpg">
-		<img src="bird.jpg" alt="bird">
-   </picture>
 
-   	<style>
-   		h2
-   		{
-   			padding:25px;
-   			text-indent: left;
-   			margin-top: 30px; 
-   		}
-   	</style>
-   <h2>
+        </li>
+      </ul>
+    </header>
 
-   	Travelling in Depression
-   </h2>
-   <p style="padding: 25px; font-size: 14px;">
-   	When I was very little, I caught the travel bug, It was strated after my gradepoints first brought me to their home in <br>France and I have now been to twenty-nine different countries. Each has given me a wnique learning experience.<br>
-   	At five, I marveled at the Eiffel Tower in the City of Lights. When I was eight, I stood in the heart of Piazza San Marco <br> feeding hordes of pigeons, then glided down Venetian waterways on sleek gondolas. At thirteen, I saw the ancient,<br> megalithic structure of stonehenge and walked along the Great wal of China, amazed that the thousand-year-old <br> stones were still in place.
-   	<br>
-    <br>
-  
-  	It was through exploring cultures around the world that I first became interested in language.
-  	<br>
-  	
-  <img src="girl.jpeg" alt="girl;"
-  style="float: left; width: 16%;
-  height: 30%;">
-  It began with French, whi  ch taugh me the importance of pronunciation.I<br>
-  remember once asking a store owner in Paris where Rue des Pyramides, was.<br>But when I pronounced it PYR-a-mides instead of pyr-A-mides, with more<br>accent on the A, she looked at me bewildered.
-  <br>
-  <br>
-  	In the eight grade, I became fascinated with Spanish and aware of its<br>similarities with English through cognates. Baseball in Spain, for example, is<br> beisbol, which looks different but sound nearly the same. This was incredible<br>to me as it made speech and comprehension more fluid, and even today I find <br>that cognates come to the rescue when I forget how to say something in<br>Spanish.
-  <br>
-  <br>
-  	Then, in high school, I developed an enthuisiasm for Chinese. As I studied<br> Chinese at my school, I marveled how if just one stroke was missing from a<br>character, the meaning is lost. I love how long words were formed by <br> combining simpler characters, so  Huǒ (火)  meaning fire and  Shān (山)  meaning<br> mountain can be joined to create  Huǒshān (火山), wich means vocano. love
-  	<br>
-   spending hours at time practicing the characters and I can feel the beauty and rhythm as I from them.
-  </p>
-  <hr>
-
-  <img src="laptop.jpg" alt="laptop"
-  usemap="#laptopmap" style="width: 96%; height: 500px;">
-  <map name="laptopmap">
-  	<area shape="poly" coords="941,131,675,619,89,635,239749,895,793,1207,175,943,129" href="https://www.facebook.com/darus.gbuyee" alt="laptop" />
-
-      <area shape="square" coords="997,755,903,825" href="https://www.facebook.com/darus.gbuyee" alt="laptop"
-      />
-
+  <h1>Hello</h1>
+  <h1>I'm Harris K. Johnson</h1>
+  <a href="about.html"><button class="mybutton">About</button></a>
+  <a href="about.html"><button class="mybutton">Contact</button></a>
 </body>
 </html>
- 
