--- a/Ruthfina.html
+++ b/Ruthfina.html
@@ -46,7 +46,9 @@
 		  <li><a href="Home.html" class="page-scroll">Home</a></li>
 		  <li><a href="#header" class="page-scroll">Cover</a></li>
         <li><a href="#about" class="page-scroll">About Me</a></li>
+		  <!--
         <li><a href="#gullary" class="page-scroll">Gullary</a></li>
+		-->
         <li><a href="#contact" class="page-scroll">Contact</a></li>
       </ul>
     </div>
@@ -62,7 +64,7 @@
           <div class="col-md-8 col-md-offset-2 intro-text">
             <h1>My Name is<br>
               Ruthfina Samuel </h1>
-            <p>I am a member of Arts Assignemt Group six (6)</p>
+            <p>I am a member of Arts Assignemt Group Seven (7)</p>
             <a href="#about" class="btn btn-custom btn-lg page-scroll">Learn More</a> </div>
         </div>
       </div>
@@ -116,60 +118,6 @@
   </div>
 </div>
 
-<!-- Gallery Section -->
-<div id="gullary">
-  <div class="container">
-    <div class="section-title">
-      <h2>Gullary</h2>
-    </div>
-    <div class="row">
-      <div class="col-md-4">
-        <div class="service-media"> <img src="img/gullary/img-2.jpg" alt=" "> </div>
-        <div class="service-desc">
-          <h3>Just Having Fun</h3>
-          <p>I woke up happy that God has given me a life that is fill with people who love me with all their hearts</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="service-media"> <img src="img/gullary/img-3.jpg" alt=" "> </div>
-        <div class="service-desc">
-          <h3>My  Nieces and Nephew</h3>
-          <p>She's so cute an lovely. i love her eyes and lips and hair. One day i will have my own cute little baby</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="service-media"> <img src="img/gullary/img-4.jpg" alt=" "> </div>
-        <div class="service-desc">
-          <h3>Cute Me</h3>
-          <p>I love my eyes and lips. My skin tone glows like a setting sun</p>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-4">
-        <div class="service-media"> <img src="img/gullary/img-5.jpg" alt=" "> </div>
-        <div class="service-desc">
-          <h3>my friend and me</h3>
-          <p>life is what you make of it. Decide what you want to become </p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="service-media"> <img src="img/gullary/Img-7.jpg" alt=" "> </div>
-        <div class="service-desc">
-          <h3>life is Good</h3>
-          <p>Think God for his blessing and Grace, the lord has been so great to me.</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="service-media"> <img src="img/gullary/img-10.jpg" alt=" "> </div>
-        <div class="service-desc">
-          <h3>my bro & ALL</h3>
-          <p>He is full of trouble but cool and smart. He full of headach but funny</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
 <!-- Contact Section -->
 <div id="contact">
@@ -178,7 +126,7 @@
       <div class="row">
         <div class="section-title">
           <h2>Get In Touch</h2>
-          <p>Please fill out the form below to send us an email and we will get back to you as soon as possible.</p>
+          <p>Please fill out the form below to send me an email and I will get back to you as soon as possible.</p>
         </div>
         <form name="sentMessage" id="contactForm" novalidate>
           <div class="row">
